Configuration - ConnectionPool (datasouce)

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,4 @@
-bibernate.connection.url=jdbc:mysql://localhost:3306/mydb
-bibernate.connection.username=user
-bibernate.connection.password=pass
+bibernate.connection-pool.type=hikari
+dataSource.jdbcUrl=jdbc:postgresql://localhost:5432/mydb
+dataSource.username=user
+dataSource.password=pass
